full-moon/tests/roblox_cases/pass/types_variadic/source.lua
type Foo = (...number) -> ()

function foo(...: number)
end