full-moon/tests/roblox_cases/fail/parser/param_variadic_types/source.lua
function bar(test: ...number)
end
